# embedded_platforms

./: README.md
fpu/: BUILD.bazel
rtos/: BUILD.bazel
