constraint_setting(
    name = "fpu",
)

constraint_value(
    name = "none",
    constraint_setting = "fpu",
)

constraint_value(
    name = "soft",
    constraint_setting = "fpu",
)

constraint_value(
    name = "fpv4-sp",
    constraint_setting = "fpu",
)

constraint_value(
    name = "fpv5-d16",
    constraint_setting = "fpu",
)
