constraint_setting(
    name = "fpu",
)

constraint_value(
    name = "none",
    constraint_setting = "fpu",
)

constraint_value(
    name = "fpv4_sp_d16",
    constraint_setting = "fpu",
)

constraint_value(
    name = "fpv4_d16",
    constraint_setting = "fpu",
)

constraint_value(
    name = "fpv4_d32",
    constraint_setting = "fpu",
)

constraint_value(
    name = "fpv5_d16",
    constraint_setting = "fpu",
)
